* Thu Sep 29 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add SiteCast support to mod_gridsite (file location
  discovery via UDP multicast of HTCP messages.)
* Wed Sep 21 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add ports 777 and 488 to example httpd.conf files in
  docs. See http://www.gridsite.org/wiki/IP_Ports
* Tue Sep 13 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.12 ====
* Tue Sep 13 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix bug #10031 submitted by Fabrizio Pacini 
  <fabrizio.pacini@cern.ch> (invalid free in 
  GRSTgaclAclLoadFile if ACL format not valid.)
* Mon Sep 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Accept GRIDHTTP_ONETIME when passed in HTTP query
  (still overridden by a GRIDHTTP_ONETIME in a cookie.)
* Sat Sep 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix problem with attempted upgrades to GridHTTP when
  already on the HTTP virtual server.
* Fri Sep 9 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- GRST_DESTINATION_TRANSLATED and GRST_DESTINATION_PERM
  environment variables, for use with CGI-based COPY.
- Rework GridHTTP (ex-Downgrade) code to store method
  and URI with permission, rather than credentials.
- Restrict use of GridSiteOnetimesDir to main server.
* Fri Aug 26 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix for HTTP PUT lack-of-truncation bug found by 
  Mike Jones, and support for HTTP/WebDAV MOVE.
- Add MOVE support to htcp and update htcp manpage.
- Unset CURLOPT_SSL_VERIFYPEER in htcp etc when using
  --noverify option.
* Fri Jun 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.11 ====
* Fri Jun 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Tidy up gsexec vs GridSiteDiskMode
* Fri Jun 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.10 ====
* Wed Jun 8 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add GridSiteDiskMode Apache directive to set file
  permissions.
- Add GridSiteExecMethod and GridSiteUserGroup to 