@@ -36,9 +36,8 @@ GridSite also includes some commands and man pages in /usr/bin and
 You must also install the CA root certificates of the CA's 
 used by the users you wish to talk to. These should be installed in
 /etc/grid-security/certificates as files like 01621954.0, and RPMs and tar
-files for many common European and North American CAs are available from
-<a href="https://datagrid.in2p3.fr/distribution/datagrid/security/">
-https://datagrid.in2p3.fr/distribution/datagrid/security/</a>
+files for many common European and North American CAs are available via the
+<a href="http://www.eugridpma.org/">EU Grid PMA</a>.
 
 <p>
 This location also has VOMS server certificate RPMs which install into
