@@ -1,0 +1,91 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<definitions 
+    targetNamespace="http://www.gridsite.org/namespaces/delegation-1" 
+    xmlns="http://schemas.xmlsoap.org/wsdl/" 
+    xmlns:wsdlsoap="http://schemas.xmlsoap.org/wsdl/soap/" 
+    xmlns:tns="http://www.gridsite.org/namespaces/delegation-1" 
+    xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+ <types>
+  <schema 
+        targetNamespace="http://www.gridsite.org/namespaces/delegation-1" 
+        xmlns="http://www.w3.org/2001/XMLSchema">
+   <complexType name="DelegationException">
+    <sequence>
+     <element name="message" nillable="true" type="xsd:string"/>
+    </sequence>
+   </complexType>
+  </schema>
+ </types>
+
+   <message name="getProxyReqResponse">
+      <part name="getProxyReqReturn" type="xsd:string"/>
+   </message>
+   <message name="getProxyReqRequest">
+      <part name="delegationID" type="xsd:string"/>
+   </message>
+
+   <message name="DelegationException">
+      <part name="fault" type="tns:DelegationException"/>
+   </message>
+
+   <message name="putProxyResponse"/>
+   <message name="putProxyRequest">
+      <part name="delegationID" type="xsd:string"/>
+      <part name="proxy" type="xsd:string"/>
+   </message>
+
+   <portType name="Delegation">
+      <operation name="getProxyReq" parameterOrder="delegationID">
+         <documentation>
+            Starts the delegation procedure by asking for a certificate 
+            signing request from the server. The server answers with a
+            certificate signing request which includes the public key 
+            for the new delegated credentials. Uses PEM encoding.
+         </documentation>
+         <input message="tns:getProxyReqRequest" name="getProxyReqRequest"/>
+         <output message="tns:getProxyReqResponse" name="getProxyReqResponse"/>
+         <fault message="tns:DelegationException" name="DelegationException"/>
+      </operation>
+      
+      <operation name="putProxy" parameterOrder="delegationID proxy">
+         <documentation>
+            Finishes the delegation procedure by sending the signed 
+            proxy certificate to the server. Uses PEM encoding.
+         </documentation>
+         <input message="tns:putProxyRequest" name="putProxyRequest"/>
+         <output message="tns:putProxyResponse" name="putProxyResponse"/>
+         <fault message="tns:DelegationException" name="DelegationException"/>
+      </operation>
+   </portType>
+
+   <binding name="DelegationSoapBinding" type="tns:Delegation">
+      <wsdlsoap:binding style="rpc" transport="http://schemas.xmlsoap.org/soap/http"/>
+
+      <operation name="getProxyReq">
+         <wsdlsoap:operation soapAction=""/>
+         <input name="getProxyReqRequest">
+            <wsdlsoap:body namespace="http://www.gridsite.org/namespaces/delegation-1" use="literal"/>
+         </input>
+         <output name="getProxyReqResponse">
+            <wsdlsoap:body namespace="http://www.gridsite.org/namespaces/delegation-1" use="literal"/>
+         </output>
+         <fault name="DelegationException">
+            <wsdlsoap:fault name="DelegationException" use="literal"/>
+         </fault>
+      </operation>
+
+      <operation name="putProxy">
+         <wsdlsoap:operation soapAction=""/>
+         <input name="putProxyRequest">
+            <wsdlsoap:body namespace="http://www.gridsite.org/namespaces/delegation-1" use="literal"/>
+         </input>
+         <output name="putProxyResponse">
+            <wsdlsoap:body namespace="http://www.gridsite.org/namespaces/delegation-1" use="literal"/>
+         </output>
+         <fault name="DelegationException">
+            <wsdlsoap:fault name="DelegationException" use="literal"/>
+         </fault>
+      </operation>
+   </binding>
+
+</definitions>
